# k2send-svn

branches/devel-0.2/: ChangeLog  TODO
branches/devel-0.2/doc/en/: Makefile.in
branches/devel-0.2/po/: Makefile.in
branches/devel-0.2/src/: Makefile.am  k2send.cpp  k2send.h  k2sendconsole.cpp  k2sendconsole.h  k2sendplayer.cpp  k2sendplaylist.cpp  k2sendplaylist.h  k2sendplaylistitem.cpp  k2sendplaylistitem.h  k2sendsource.cpp  k2sendsource.h  k2sendui.rc  k2sendwidget.cpp  k2sendwidget.h  k2sendwidgetbase.ui  main.cpp  pref.cpp  pref.h
branches/devel-0.3/: ChangeLog
branches/devel-0.3/doc/: Makefile.in
branches/devel-0.3/doc/en/: index.docbook
branches/devel-0.3/src/: Makefile.am  k2send.cpp  k2send.h  k2sendconsole.cpp  k2sendconsole.h  k2sendplayer.cpp  k2sendplayer.h  k2sendplaylist.cpp  k2sendplaylist.h  k2sendplaylistitem.cpp  k2sendplaylistitem.h  k2sendsource.cpp  k2sendsource.h  k2sendwidget.cpp  k2sendwidget.h  k2sendwidgetbase.ui  k2sendwidgetbase.ui.h  main.cpp  osd.cpp  osd.h  pref.cpp  pref.h
tags/release-0.1/: .svnignore  README  configure.in.in
tags/release-0.1/doc/en/: Makefile.am
tags/release-0.1/src/: k2sendplayer.cpp  k2sendplayer.h  k2sendwidgetbase.ui  k2sendwidgetbase.ui.h
tags/release-0.1/templates/: cpp
trunk/: AUTHORS  ChangeLog  Doxyfile  Makefile.in  NEWS  README  TODO  config.h.in  configure  configure.in  k2send.kdevelop  k2send.kdevelop.pcs  k2send.kdevses
trunk/admin/: bluez-libs.m4
trunk/autom4te.cache/: output.0  traces.0
trunk/debug/src/: .kdbgrc.k2send  k2sendplayer.loT
trunk/doc/: Makefile.am
trunk/src/: Makefile.am  Makefile.in  k2send.cpp  k2send.desktop  k2send.h  k2send.lsm  k2sendconsole.cpp  k2sendconsole.h  k2sendplayer.cpp  k2sendplayer.h  k2sendplaylistitem.cpp  k2sendplaylistitem.h  k2sendui.rc  k2sendwidget.cpp  k2sendwidget.h  k2sendwidgetbase.ui.h  main.cpp
